--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- col-md-5ths @ col-md-2.4 -->
     <link rel="stylesheet" href="kipsrm-web/assets/css/bootstrap-col-5.css">
     <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="css/highslide.css" />
     <link rel="stylesheet" href="kipsrm-web/assets/css/style.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -71,6 +72,9 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="http://code.highcharts.com/modules/heatmap.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/highcharts-more.js"></script>
+    <script src="https://www.highcharts.com/samples/static/highslide-full.min.js"></script>
+    <script src="https://www.highcharts.com/samples/static/highslide.config.js" charset="utf-8"></script>
     <!-- TagCanvas -->
     <script src="kipsrm-web/assets/lib/tagcanvas/jquery.tagcanvas.js"></script>
     <!-- Leaflet -->
@@ -98,6 +102,7 @@
     <script src="kipsrm-web/app/components/home/home.controller.js"></script>
     <!-- Incidents -->
     <script src="kipsrm-web/app/components/incidents/nite/nite.controller.js"></script>
+    <script src="kipsrm-web/app/components/incidents/nite/iidf.directive.js"></script>
     <script src="kipsrm-web/app/components/incidents/nite/heatmap.controller.js"></script>
     <script src="kipsrm-web/app/components/incidents/nite/event.controller.js"></script>
     <script src="kipsrm-web/app/components/incidents/nite/spider.controller.js"></script>
@@ -150,7 +155,7 @@
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
-        $.widget.bridge('uibutton', $.ui.button);
+    $.widget.bridge('uibutton', $.ui.button);
     </script>
     <!-- Bootstrap 3.3.6 -->
     <script src="kipsrm-web/assets/lib/adminlte/bootstrap/js/bootstrap.min.js"></script>
