Reindent index.html

--- a/index.html
+++ b/index.html
@@ -13,25 +13,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.1.1/rzslider.min.css" />
     <!-- Theme style -->
     <link rel="stylesheet" href="kipsrm-web/assets/lib/adminlte/dist/css/AdminLTE.css">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-       folder instead of downloading all of them to reduce the load. -->
+    <!-- AdminLTE Skins -->
     <link rel="stylesheet" href="kipsrm-web/assets/lib/adminlte/dist/css/skins/_all-skins.min.css">
+    <!-- AngularJS Slider -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.1.1/rzslider.min.css" />
     <link rel="stylesheet" type="text/css" href="kipsrm-web/assets/css/EventDrops.css" />
-    <!-- iCheck -->
-    <!--  <link rel="stylesheet" href="kipsrm-web/assets/lib/adminlte/plugins/iCheck/flat/blue.css">-->
-    <!-- Morris chart -->
-    <!--  <link rel="stylesheet" href="kipsrm-web/assets/lib/adminlte/plugins/morris/morris.css">-->
-    <!-- jvectormap -->
-    <!--  <link rel="stylesheet" href="kipsrm-web/assets/lib/adminlte/plugins/jvectormap/jquery-jvectormap-1.2.2.css">-->
-    <!-- Date Picker -->
-    <!--  <link rel="stylesheet" href="kipsrm-web/assets/lib/adminlte/plugins/datepicker/datepicker3.css">-->
-    <!-- Daterange picker -->
-    <!--  <link rel="stylesheet" href="kipsrm-web/assets/lib/adminlte/plugins/daterangepicker/daterangepicker.css">-->
-    <!-- bootstrap wysihtml5 - text editor -->
-    <!--  <link rel="stylesheet" href="kipsrm-web/assets/lib/adminlte/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">-->
     <!-- col-md-5ths @ col-md-2.4 -->
     <link rel="stylesheet" href="kipsrm-web/assets/css/bootstrap-col-5.css">
     <!-- Custom CSS -->
@@ -48,10 +36,10 @@
     <!-- AngularJS -->
     <script src="kipsrm-web/assets/lib/angular/angular.min.js"></script>
     <script src="kipsrm-web/assets/lib/angular/angular-route.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.1.1/rzslider.min.js"></script>
     <!-- AngularJS libraries -->
     <script src="kipsrm-web/assets/lib/angular-ui-bootstrap/ui-bootstrap-tpls-2.4.0.min.js"></script>
     <script src="kipsrm-web/assets/lib/angular-translate/angular-translate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.1.1/rzslider.min.js"></script>
     <!-- wordlcoud -->
     <script src="kipsrm-web/assets/lib/wordcloud/d3.min.js"></script>
     <script src="kipsrm-web/assets/lib/EventDrop/EventDrops.js"></script>
